Add content and html5 structure

--- a/index.html
+++ b/index.html
@@ -5,6 +5,62 @@
         <title>The Less I Know the Better</title>
     </head>
 <body>
+    <header>
+        <h1>The Less I Know the Better</h1>
+        <h2>Tame Impala</h2>
+    </header>
+
+    <section>
+        <article>
+            <p>
+                Someone said they left together<br>
+                I ran out the door to get her<br>
+                She was holding hands with Trevor<br>
+                Not the greatest feeling ever<br>
+                Said, "Pull yourself together<br>
+                You should try your luck with Heather"<br>
+                Then I heard they slept together<br>
+                Oh, the less I know the better<br>
+                The less I know the better
+            </p>
+            <p>
+                Oh my love, can't you see yourself by my side<br>
+                No surprise when you're on his shoulder like every night<br>
+                Oh my love, can't you see that you're on my mind<br>
+                Don't suppose we could convince your lover to change his mind<br>
+                So goodbye
+            </p>
+            <p>
+                She said, "It's not now or never<br>
+                Wait ten years, we'll be together"<br>
+                I said, "Better late than never<br>
+                Just don't make me wait forever"<br>
+                Don't make me wait forever<br>
+                Don't make me wait forever<br>
+            </p>
+            <p>
+                Oh my love, can't you see yourself by my side?<br>
+                I don't suppose you could convince your lover to change his mind<br>
+                I was doing fine without you<br>
+                'Til I saw your face, now I can't erase<br>
+                Giving in to all his bullshit<br>
+                Is this what you want, is this who you are?<br>
+                I was doing fine without you<br>
+                'Til I saw your eyes turn away from mine<br>
+                Oh, sweet darling, where he wants you<br>
+                Said, "Come on Superman, say your stupid line"<br>
+                Said, "Come on Superman, say your stupid line"<br>
+                Said, "Come on Superman, say your stupid line"
+            </p>
+        </article>
+    </section>
+
+    <footer>
+        <p>Source: <a href="https://www.lyricfind.com/">LyricFind</a><br>
+            Songwriters: Kevin Parker<br>
+            The Less I Know the Better lyrics &copy; BMG Rights Management
+        </p>
+    </footer>
 
 </body>
 </html>
