--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 Said, "Come on Superman, say your stupid line"<br>
                 Said, "Come on Superman, say your stupid line"
             </p>
+            <p>New paragraph</p>
         </article>
     </section>
 
