--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
 <body>
     <header>
-        <h1>The Less I Know the Better</h1>
+        <h1 class="title">The Less I Know the Better</h1>
         <h2>Tame Impala</h2>
     </header>
 
