Add text to last paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 Don't make me wait forever<br>
             </p>
             <p>
-                Oh my love, can't you see yourself by my side?<br>
+                Oh my love, oh my love, can't you see yourself by my side?<br>
                 I don't suppose you could convince your lover to change his mind<br>
                 I was doing fine without you<br>
                 'Til I saw your face, now I can't erase<br>
