Add Kasia Kasia at the end of body

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Some song</title>
+        <title>Master Some song</title>
         <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200;400;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="css/style.css">
     </head>
@@ -54,7 +54,8 @@
                 Said, "Come on Superman, say your stupid line"<br>
                 Said, "Come on Superman, say your stupid line"
             </p>
-            <p>Kasia New paragraph</p>
+            <p>New paragraph</p>
+            <p>Kasia Kasia</p>
         </article>
     </section>
 
